--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -24,13 +24,16 @@
     }
    ],
    "source": [
+    "# excitations main\n",
+    "\n",
     "import numpy as np\n",
     "import os\n",
     "import utils\n",
     "from grid import Grid\n",
     "from gs import groundstate\n",
     "from exc import excitations\n",
-    "from plotting import plot2D, plot_cns\n",
+    "from vert import vertices\n",
+    "from plotting import plot2D, plot_cns, plot_omega0\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
@@ -53,46 +56,28 @@
     "    omega0s = np.zeros(len(dJUs))\n",
     "    omega1s = np.zeros(len(dJUs))\n",
     "    omega2s = np.zeros(len(dJUs))\n",
-    "\n",
+    "    omegas = np.zeros((len(dJUs), 3))\n",
     "    for count in range(len(dJUs)):\n",
     "        dJU = dJUs[count]\n",
     "        gs = groundstate(max_iter, N, dJU, muU)\n",
     "        cns = gs.cns()\n",
-    "        # print(\"cns = \", cns)\n",
-    "        psi0 = gs.psi0(cns)\n",
-    "        # print(\"psi0 = \", psi0)\n",
+    "\n",
     "        exc = excitations(grid, gs, cns)\n",
     "        uks, vks, omegaklambda = exc.calculate_matrices()\n",
-    "        # print(\"omegaklambda = \", omegaklambda)\n",
+    "        vert = vertices(grid, gs, uks, vks, cns, gs.n0)\n",
     "        omega0s[count] = omegaklambda[1][5][5]\n",
     "        omega1s[count] = omegaklambda[2][5][5]\n",
     "        omega2s[count] = omegaklambda[3][5][5]\n",
-    "    plt.plot(dJUs, omega0s, label=r\"$\\omega_0$\")\n",
-    "    plt.plot(dJUs, omega1s, label=r\"$\\omega_1$\")\n",
-    "    plt.plot(dJUs, omega2s, label=r\"$\\omega_2$\")\n",
-    "    plt.legend()\n",
-    "    plt.xlabel(r\"$\\Delta J/U$\")\n",
-    "    plt.ylabel(r\"$\\omega$\")\n",
+    "    omegas[:, 0] = omega0s\n",
+    "    omegas[:, 1] = omega1s\n",
+    "    omegas[:, 2] = omega2s\n",
+    "    # plot_omega0(\n",
+    "    #     omegas,\n",
+    "    #     r\"$2\\delta J/U$\",\n",
+    "    #     r\"$\\omega_{\\lambda}(|\\vec{k}| = 0)$\", show=True\n",
+    "    # )\n",
+    "    plt.plot(dJUs, omega0s, label=r\"$\\omega_{0}$\")\n",
     "    plt.show()\n",
-    "\n",
-    "    # omega0U = gs.omega0U(cns)\n",
-    "    \n",
-    "    # n0 = gs.n0(cns)\n",
-    "\n",
-    "    # plt.plot(cns)\n",
-    "    # plt.xlim(0, 70)\n",
-    "    # plt.show()\n",
-    "    # psi0 = psi0(cns, N)\n",
-    "    # n0 = n0(cns, N)\n",
-    "    # omega0U = omega0(cns, N, dJU, muU, psi0)\n",
-    "\n",
-    "    # n0s[count] = n0\n",
-    "    # omega0U = - 2 * dJU * psi0 * psi0 + omega0U\n",
-    "    # for dJU in dJUs:\n",
-    "    #     cns = psi(config[\"max_iter_psi\"], config[\"grid\"][\"N\"], 0.5, eval(config[\"physics\"][\"Mu\"]))\n",
-    "    #     cnslist.append(cns)\n",
-    "\n",
-    "    # plot_cns(cnslist, r'$n$', r'$\\bar{c}_n$', os.path.join(output_dir, \"csn.png\") )\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
