--- a/src/Plots.ipynb
+++ b/src/Plots.ipynb
@@ -43,62 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'src/config.yml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m~/Library/CloudStorage/GoogleDrive-ragheedalhyder@gmail.com/Mon Drive/Physics/Aarhus/Projects/Lattice Bose Polaron/Codes/Python/src/main_perturbative.py:73\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;66;03m# plt.plot(dJUs, omega0s + omega1s + omega2s, label=r\"$\\omega_{0}$\")\u001b[39;00m\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;66;03m# plt.show()\u001b[39;00m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# plt.plot(dJUs, omega1s, label=r\"$\\omega_{0}$\")\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# plt.show()\u001b[39;00m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 73\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Library/CloudStorage/GoogleDrive-ragheedalhyder@gmail.com/Mon Drive/Physics/Aarhus/Projects/Lattice Bose Polaron/Codes/Python/src/main_perturbative.py:21\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m args \u001b[38;5;241m=\u001b[39m class_utils\u001b[38;5;241m.\u001b[39mparse_args()\n\u001b[1;32m     19\u001b[0m output_dir \u001b[38;5;241m=\u001b[39m class_utils\u001b[38;5;241m.\u001b[39mcreate_output_dir()\n\u001b[0;32m---> 21\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mclass_utils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m Lx \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrid\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLx\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     24\u001b[0m Ly \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrid\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLy\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/Library/CloudStorage/GoogleDrive-ragheedalhyder@gmail.com/Mon Drive/Physics/Aarhus/Projects/Lattice Bose Polaron/Codes/Python/src/class_utils.py:19\u001b[0m, in \u001b[0;36mread_config\u001b[0;34m(config_file)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mread_config\u001b[39m(config_file):\n\u001b[0;32m---> 19\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mconfig_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     20\u001b[0m         config \u001b[38;5;241m=\u001b[39m yaml\u001b[38;5;241m.\u001b[39mload(f, Loader\u001b[38;5;241m=\u001b[39myaml\u001b[38;5;241m.\u001b[39mFullLoader)\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m config\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'src/config.yml'"
+     ]
+    }
+   ],
    "source": [
-    "# Compute the energy of the polaron in the limit of small U12\n",
     "\n",
-    "import numpy as np\n",
-    "import class_utils as class_utils\n",
-    "from class_grid import Grid\n",
-    "from class_params import Params\n",
-    "from class_groundstate import groundstate\n",
-    "from class_excitations import excitations\n",
-    "from class_vertices import vertices\n",
-    "from class_perturbation import perturbative\n",
-    "from class_self_energy import Self_Energy\n",
-    "from class_io import IO\n",
-    "from class_plotting import plot2D, plot_cns, plot_omega0\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "config_path = \"config.yml\" \n",
-    "\n",
-    "output_dir = class_utils.create_output_dir()\n",
-    "\n",
-    "config = class_utils.read_config(config_path)\n",
-    "\n",
-    "Lx = config[\"grid\"][\"Lx\"]\n",
-    "Ly = config[\"grid\"][\"Ly\"]\n",
-    "\n",
-    "N = config[\"physics\"][\"N\"]\n",
-    "dJUs = np.arange(**config[\"lists\"][\"dJUs\"])\n",
-    "muU = eval(config[\"physics\"][\"muU\"])\n",
-    "UIB = config[\"physics\"][\"UIB\"]\n",
-    "cutoff = config[\"physics\"][\"cutoff\"]\n",
-    "\n",
-    "grid = Grid(Lx, Ly)\n",
-    "\n",
-    "omega0s = np.zeros(len(dJUs))\n",
-    "omega1s = np.zeros(len(dJUs))\n",
-    "omega2s = np.zeros(len(dJUs))\n",
-    "omegas = np.zeros((len(dJUs), 3))\n",
-    "\n",
-    "for count in range(len(dJUs)):\n",
-    "    dJU = dJUs[count]\n",
-    "    params = Params(N, dJU, muU, UIB, cutoff)\n",
-    "    gs = groundstate(params)\n",
-    "    cns = gs.cns()\n",
-    "    n0 = gs.n0(cns)\n",
-    "    psi0 = gs.psi0(cns)\n",
-    "    exc = excitations(grid, params, gs, cns)\n",
-    "    uks, vks, omegaklambda = exc.calculate_matrices()\n",
-    "    verts = vertices(grid, gs, uks, vks, cns, n0)\n",
-    "    pert = perturbative(grid, params, verts, omegaklambda)\n",
-    "    Pert_Energy = pert.perturbative_energy(n0)\n",
-    "    omega0s[count] = Pert_Energy[0]\n",
-    "    omega1s[count] = Pert_Energy[1]\n",
-    "    omega2s[count] = Pert_Energy[2]"
+    "%run main_perturbative.py"
    ]
   },
   {
@@ -184,7 +148,7 @@
     "\n",
     "UIB = config[\"physics\"][\"UIB\"]\n",
     "cutoff = config[\"physics\"][\"cutoff\"]\n",
-    "dJUs = np.arange(**config[\"lists\"][\"dJUs\"])\n",
+    "dJUs = np.linspace(**config[\"lists\"][\"dJUs\"])\n",
     "\n",
     "grid = Grid(Lx, Ly)\n",
     "\n",
@@ -274,7 +238,7 @@
     "Ly = config[\"grid\"][\"Ly\"]\n",
     "\n",
     "N = config[\"physics\"][\"N\"]\n",
-    "dJUs = np.arange(**config[\"lists\"][\"dJUs\"])\n",
+    "dJUs = np.linspace(**config[\"lists\"][\"dJUs\"])\n",
     "dJU = dJUs[0]\n",
     "muU = eval(config[\"physics\"][\"muU\"])\n",
     "UIB = config[\"physics\"][\"UIB\"]\n",
@@ -646,7 +610,7 @@
     "config = class_utils.read_config(config_path)\n",
     "\n",
     "UIB, muU, M, N = 0.2, 0.41, 100, 7  # replace with your actual values\n",
-    "dJUs = np.arange(**config[\"lists\"][\"dJUs\"])\n",
+    "dJUs = np.linspace(**config[\"lists\"][\"dJUs\"])\n",
     "en_vector = np.linspace(0.01, 0.35, 120)\n",
     "\n",
     "io = IO()\n",
@@ -749,7 +713,7 @@
     "Ly = config[\"grid\"][\"Ly\"]\n",
     "\n",
     "N = config[\"physics\"][\"N\"]\n",
-    "dJUs = np.arange(**config[\"lists\"][\"dJUs\"])\n",
+    "dJUs = np.linspace(**config[\"lists\"][\"dJUs\"])\n",
     "muU = eval(config[\"physics\"][\"muU\"])\n",
     "UIB = config[\"physics\"][\"UIB\"]\n",
     "cutoff = config[\"physics\"][\"cutoff\"]\n",
@@ -1137,7 +1101,7 @@
     "Ly = config[\"grid\"][\"Ly\"]\n",
     "\n",
     "N = config[\"physics\"][\"N\"]\n",
-    "dJUs = np.arange(**config[\"lists\"][\"dJUs\"])\n",
+    "dJUs = np.linspace(**config[\"lists\"][\"dJUs\"])\n",
     "muU = eval(config[\"physics\"][\"muU\"])\n",
     "UIB = config[\"physics\"][\"UIB\"]\n",
     "cutoff = config[\"physics\"][\"cutoff\"]\n",
@@ -1289,7 +1253,7 @@
     "Ly = config[\"grid\"][\"Ly\"]\n",
     "\n",
     "N = config[\"physics\"][\"N\"]\n",
-    "dJUs = np.arange(**config[\"lists\"][\"dJUs\"])\n",
+    "dJUs = np.linspace(**config[\"lists\"][\"dJUs\"])\n",
     "muU = eval(config[\"physics\"][\"muU\"])\n",
     "UIB = config[\"physics\"][\"UIB\"]\n",
     "cutoff = config[\"physics\"][\"cutoff\"]\n",
