--- a/src/Testing_codes.ipynb
+++ b/src/Testing_codes.ipynb
@@ -2274,7 +2274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "boselattice",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2288,9 +2288,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
